--- a/about.html
+++ b/about.html
@@ -85,7 +85,7 @@
         </div>
     </div>
     
-    <p style="text-align:center; margin: 20px; font-family: passiontea; color: #666; position: absolute; bottom: 0; width: 100%; clear: both; margin-bottom: 24px;"> You have reached the bottom of this page! &copy Annie Lin</p>
+    <p id="footer"> You have reached the bottom of this page! &copy Annie Lin</p>
 <!-- You have reached the end! -->
 
     
