Basic Nav Bar and Footer on Pages

--- a/about.html
+++ b/about.html
@@ -2,6 +2,14 @@
 
 <html lang="en">
 <head>
+    <!--
+               \||/                                                    \||/
+               \||/                                                    \||/
+             .<><><>.                  Hi Stranger!                  .<><><>.
+            .<><><><>.           Welcome to my source code!         .<><><><>.   
+            '<><><><>'                                              '<><><><>'
+             '<><><>'                                                '<><><>'
+     -->
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta content='harvard, annie, lin, annie lin, philadelphia' name='keywords'>
     <title>Annie Lin</title>
