--- a/about.html
+++ b/about.html
@@ -75,7 +75,7 @@
             
             <h1>SUMMARY</h1>
               <p>Hi! I'm Annie Lin aka the girl with the bangs. 
-                  <br> NYC-born and Philly-raised. Alumni of the 272nd class of Central High School. (2nd oldest public high school in the country!) Proud bearer of a simian line. Current sophomore at Harvard studying CS. 
+                  <br> NYC-born and Philly-raised. Alumni of the 272nd class of Central. (2nd oldest public high school in the country!) Proud bearer of a simian line. Current sophomore at Harvard studying CS. 
                   <br> Artist, Scholar, & so much more!</p>
             <h1>THINGS I LIKE:</h1>
             <ul class="list">
