--- a/blog.html
+++ b/blog.html
@@ -72,9 +72,9 @@
             <br>
             <br>
             <br>
-            <br>
             <p id="eyes"> LOOK AT THE WORLD THROUGH MY EYES </p>
             <p id="eyes"> JUST SCROLL </p>
+            <p id="eyestiny"> (Or not, if on mobile) </p>
             <img src="images/eyes.png" style="width: 260px;"/>
         </div>
         
