--- a/about.html
+++ b/about.html
@@ -93,7 +93,7 @@
         </div>
     </div>
     
-    <p id="footer"> You have reached the bottom of this page! &copy Annie Lin</p>
+    <div id="footer"><br><p> You have reached the bottom of this page! &copy Annie Lin</p></div>
 <!-- You have reached the end! -->
 
     
