bottom moved up

--- a/about.html
+++ b/about.html
@@ -94,7 +94,7 @@
         </div>
     </div>
     
-    <div id="footer"><br><br><br><p> You have reached the bottom of this page! &copy Annie Lin</p></div>
+    <div id="footer"><br><p> You have reached the bottom of this page! &copy Annie Lin</p></div>
 <!-- You have reached the end! -->
 
     
