--- a/blog.html
+++ b/blog.html
@@ -83,7 +83,7 @@
         </div>
     </div>
     
-    <div id="footer"><br><p> You have reached the bottom of this page! &copy Annie Lin</p></div>
+    <div id="footer"><p> You have reached the bottom of this page! &copy Annie Lin</p></div>
 <!-- You have reached the end! -->
     
 </body>
