--- a/about.html
+++ b/about.html
@@ -12,6 +12,8 @@
      -->
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta content='harvard, annie, lin, annie lin, philadelphia' name='keywords'>
+    <meta name="description" content="Hello, world! Portfolio/Personal website for and made by Annie Lin, Harvard student hailing from Philadelphia!">
+    <meta name="robots" content="NOODP">
     <title>Annie Lin</title>
     <link rel="shortcut icon" href="/images/icons/shortcuticon.png" type="image/x-icon" />
     <link rel="icon" href="/images/icons/shortcuticon.png" type="image/x-icon" />
