About Page Revamped

--- a/blog.html
+++ b/blog.html
@@ -12,6 +12,7 @@
      -->
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta content='harvard, annie, lin, annie lin, philadelphia' name='keywords'>
+    <meta name="Description" content="Hello, world! Portfolio/Personal website for and made by Annie Lin, Harvard student hailing from Philadelphia!">
     <meta name="description" content="Hello, world! Portfolio/Personal website for and made by Annie Lin, Harvard student hailing from Philadelphia!">
     <meta name="robots" content="NOODP">
     <title>Annie Lin</title>
