--- a/about.html
+++ b/about.html
@@ -22,6 +22,7 @@
 </head>
     
 <body>
+    <!-- Main Section Begin -->
     <div class="main">
         <!-- Header Begin -->
         <div id="header">
@@ -60,13 +61,16 @@
             <div id="line"></div>
         </div> 
         <!-- Header End -->
+        <!-- About Begin -->
         <div class="col1about">
             <div id="aboutimage"><!-- About Image --></div> 
         </div>
         <div class="col2about">  
             <h1>SUMMARY</h1>
-              <p>Hi! I'm Annie Lin aka the girl with the bangs. 
-                  <br> NYC-born and Philly-raised. Alumni of the 272nd class of Central. (2nd oldest public high school in the country!) Proud bearer of a simian line. Current sophomore at Harvard studying CS. Artist, Scholar, & so much more!</p>
+            <p>Hi! I'm Annie Lin aka the girl with the bangs. 
+                <br> 
+                NYC-born and Philly-raised. Alumni of the 272nd class of Central. (2nd oldest public high school in the country!) Proud bearer of a simian line. Current sophomore at Harvard studying CS. Artist, Scholar, & so much more!
+            </p>
             <br>
             <h1>I ENJOY:</h1>
             <ul class="list">
@@ -81,12 +85,16 @@
               <li>making peace signs</li>
             </ul>
         </div>
+        <!-- About End -->
     </div>
+    <!-- Main Section End -->
+    <!-- Footer Begin -->
     <div id="footer">
         <br>
         <br>
         <p> You have reached the bottom of this page! &copy Annie Lin</p>
-    </div>   
+    </div> 
+    <!-- Footer End -->
 </body>
 </html>
-<!-- You have reached the end! -->
+<!-- Congrats! You have reached the end! -->
