--- a/about.html
+++ b/about.html
@@ -10,6 +10,7 @@
             '<><><><>'                                        '<><><><>'
              '<><><>'                                          '<><><>'
      -->
+    <!-- Portfolio/Personal website for and made by Annie Lin -->
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta content='harvard, annie, lin, annie lin, philadelphia' name='keywords'>
     <meta name="Description" content="Hello, world! Portfolio/Personal website for and made by Annie Lin, Harvard student hailing from Philadelphia!">
