border around blog and text overflow

--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
                 css3: true,
                 easing: 'easeOutBack',
                 scrollingSpeed: 600,
-                continuousVertical: true
+                continuousVertical: true,
+                scrollOverflow: true
             });
         });
 	</script>
@@ -143,7 +144,7 @@
                     <img src="images/eyes.png" style="width: 260px;"/>
                 </div>
                 <div class="col2blog">  
-                    <iframe width="600" height="380" src="http://theannielin.blogspot.com/" frameborder="0" allowfullscreen></iframe>
+                    <iframe class="border" width="600" height="350" src="http://theannielin.blogspot.com/" frameborder="0" allowfullscreen></iframe>
                 </div>
             </div>
         </div>
