--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
         <!-- Resume Begin -->
         <div class="section">
             <div id="resumepage">
-                <a href="resume/AnnieLinResume.pdf">
+                <a href="works/AnnieLinResume.pdf" target="_blank">
                     <div style="width: 830px; height: 30px; margin-left: auto; margin-right: auto; display: block;">
                         <div id="downloadresume">
                         Download Detailed Resume
@@ -202,6 +202,21 @@
         <!-- Resume End -->
         <!-- Work Begin -->
         <div class="section">
+            <div class="main">
+                <a href="http://github.com/theannielin" target="_blank"><div id="forkme">FORK ME ON GITHUB!</div></a>
+                <br><br><br>
+                <a href="http://brushup.me/" target="_blank"><img class="workimage" src="images/icons/brushupicon.png" style="width: 190px;"/></a>
+                <a href="http://www.hcs.harvard.edu/firstgen/" target="_blank"><img class="workimage" src="images/icons/firstgenicon.png" style="width: 190px;"/></a>
+                <a href="works/cs51project.zip" target="_blank"><img class="workimage" src="images/icons/plateicon.png" style="width: 190px;"/></a>
+                <iframe style="border:none; width: 200px; height: 190px;" src="http://files.photosnack.com/iframejs/embed.html?hash=pt9529ii&t=1400885491" width="350" height="350" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true" ></iframe>
+                <br>
+                <ul id="workdescription">
+                    <li>Brushup.Me</li>
+                    <li>Harvard First Gen Website</li>
+                    <li>Plate Recognition (Terminal)</li>
+                    <li>Artwork</li>
+                </ul>
+            </div>
         </div>
         <!-- Work End -->
         <!-- Blog Begin -->
