--- a/index.html
+++ b/index.html
@@ -103,6 +103,13 @@
     <div id="fullpage" class="layer2">
         <!-- Home Begin -->
         <div class="section">
+            <div id="homedrawing">
+                <div id="emptytable"></div>
+                <a href="#about"><div id="homeabout"></div></a>
+                <a href="#resume"><div id="homeresume"></div></a>
+                <a href="#work"><div id="homework"></div></a>
+                <a href="#blog"><div id="homeblog"></div></a>
+            </div>
         </div>
         <!-- Home End -->
         <!-- About Begin -->
