--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                 </div>
                 <div class="col2about">  
                     <h1>SUMMARY</h1>
-                    <p>Hi! I'm Annie Lin aka the girl with the bangs. 
+                    <p>Hi! I'm Annie Lin aka the girl with bangs. 
                         <br> 
                         NYC-born and Philly-raised. Alumni of the 272nd class of Central. (2nd oldest public high school in the country!) Proud bearer of a simian line. Current sophomore at Harvard studying CS. Artist, Scholar, & so much more!
                     </p>
@@ -210,7 +210,7 @@
         <!-- Work Begin -->
         <div class="section">
             <div class="main">
-                <a href="http://github.com/theannielin" target="_blank"><div id="forkme">FORK ME ON GITHUB!</div></a>
+                <div width="800px"><a href="http://github.com/theannielin" target="_blank"><div id="forkme">FORK ME ON GITHUB!</div></a></div>
                 <br><br><br>
                 <a href="http://brushup.me/" target="_blank"><img class="workimage" src="images/icons/brushupicon.png" style="width: 190px;"/></a>
                 <a href="http://www.hcs.harvard.edu/firstgen/" target="_blank"><img class="workimage" src="images/icons/firstgenicon.png" style="width: 190px;"/></a>
