--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
                     <p id="eyes"> LOOK AT THE WORLD THROUGH MY EYES </p>
                     <br>
                     <p id="eyes"> JUST SCROLL </p>
-                    <p id="eyestiny"> (with the down arrow) </p>
+                    <p id="eyestiny"> (within the box) </p>
                     <img src="images/eyes.png" style="width: 260px;"/>
                 </div>
                 <div class="col2blog">  
