--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
         <div class="section">
             <div class="main">
                 <div class="col1blog">
-                    <p id="eyes"> LOOK AT THE WORLD THROUGH MY EYES </p>
+                    <p id="eyes"> LOOK AT THE WORLD THROUGH <a href="http://www.theannielin.blogspot.com">MY EYES</a> </p>
                     <br>
                     <p id="eyes"> JUST SCROLL </p>
                     <p id="eyestiny"> (within the box) </p>
