--- a/index.html
+++ b/index.html
@@ -230,11 +230,13 @@
         <div class="section">
             <div class="main">
                 <div class="col1blog">
-                    <p id="eyes"> LOOK AT THE WORLD THROUGH <br><b></b><a href="http://www.theannielin.blogspot.com">MY EYES</a></b></p>
-                    <br>
-                    <p id="eyes"> JUST SCROLL </p>
-                    <p id="eyestiny"> (within the box) </p>
-                    <img src="images/eyes.png" style="width: 260px;"/>
+                    <a href="http://www.theannielin.blogspot.com">
+	                    <p id="eyes"> LOOK AT THE WORLD THROUGH <br>MY EYES</p>
+	                    <br>
+	                    <p id="eyes"> JUST SCROLL </p>
+	                    <p id="eyestiny"> (within the box) </p>
+	                    <img src="images/eyes.png" style="width: 260px;"/>
+                    </a>
                 </div>
                 <div class="col2blog">  
                     <iframe class="border" width="620" height="350" src="http://theannielin.blogspot.com/" frameborder="0" allowfullscreen></iframe>
