--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
 	                    <p id="eyes"> LOOK AT THE WORLD THROUGH <br>MY EYES</p>
 	                    <br>
 	                    <p id="eyes"> JUST SCROLL </p>
-	                    <p id="eyestiny"> (within the box) </p>
+	                    <p id="eyestiny"> (within the box: click and then use the down arrow) </p>
 	                    <img src="images/eyes.png" style="width: 260px;"/>
                     </a>
                 </div>
