--- a/index.html
+++ b/index.html
@@ -48,6 +48,10 @@
             e.style.display = 'block';
         }
     </script>
+</head>
+    
+<body>
+    <!-- Google Analytics -->
     <script>
 	  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 	  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -58,9 +62,6 @@
 	  ga('send', 'pageview');
 	  ga(‘set’, ‘&uid’, {{USER_ID}}); // Set the user ID using signed-in user_id.
     </script>
-</head>
-    
-<body>
     <!-- Header Begin -->
     <div id="header" class="layer1">
         <div id="myheader" class="main">
