--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             e.style.display = 'block';
         }
     </script>
-    <!-- Google Analytics -->
+    <!-- Google Analytics Code -->
 	<script>
 	  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 	  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
