--- a/index.html
+++ b/index.html
@@ -48,6 +48,17 @@
             e.style.display = 'block';
         }
     </script>
+    <!-- Google Analytics Code -->
+	<script>
+	  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+	  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+	  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+	  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+	
+	  ga('create', 'UA-51636012-1', 'anniel.in');
+	  ga('send', 'pageview');
+	
+	</script>
 </head>
     
 <body>
@@ -212,10 +223,10 @@
             <div class="main">
                 <div width="800px"><a href="http://github.com/theannielin" target="_blank"><div id="forkme">FORK ME ON GITHUB!</div></a></div>
                 <br><br><br>
-                <a href="http://brushup.me/" target="_blank"><img class="workimage" src="images/icons/brushupicon.png" style="width: 190px;"/></a>
-                <a href="http://www.hcs.harvard.edu/firstgen/" target="_blank"><img class="workimage" src="images/icons/firstgenicon.png" style="width: 190px;"/></a>
-                <a href="works/cs51project.zip" target="_blank"><img class="workimage" src="images/icons/plateicon.png" style="width: 190px;"/></a>
-                <iframe style="border:none; width: 200px; height: 190px;" src="http://files.photosnack.com/iframejs/embed.html?hash=pt9529ii&t=1400885491" width="350" height="350" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true" ></iframe>
+                <a href="http://brushup.me/" target="_blank"><img class="workimage" src="images/icons/brushupicon.png" style="width: 185px;"/></a>
+                <a href="http://www.hcs.harvard.edu/firstgen/" target="_blank"><img class="workimage" src="images/icons/firstgenicon.png" style="width: 185px;"/></a>
+                <a href="works/cs51project.zip" target="_blank"><img class="workimage" src="images/icons/plateicon.png" style="width: 185px;"/></a>
+                <iframe style="border:none; width: 200px; height: 185px;" src="http://files.photosnack.com/iframejs/embed.html?hash=pt9529ii&t=1400885491" width="350" height="350" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true" ></iframe>
                 <br>
                 <ul id="workdescription">
                     <li>Brushup.Me</li>
@@ -239,7 +250,7 @@
                     </a>
                 </div>
                 <div class="col2blog">  
-                    <iframe class="border" width="620" height="350" src="http://theannielin.blogspot.com/" frameborder="0" allowfullscreen></iframe>
+                    <iframe class="border" width="620" height="350" src="http://theannielin.blogspot.com/" frameborder="0"></iframe>
                 </div>
             </div>
         </div>
