--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
                 <br><br><br>
                 <a href="http://brushup.me/" target="_blank"><img class="workimage" src="images/icons/brushupicon.png" style="width: 185px;"/></a>
                 <a href="http://www.hcs.harvard.edu/firstgen/" target="_blank"><img class="workimage" src="images/icons/firstgenicon.png" style="width: 185px;"/></a>
-                <a href="works/cs51project.zip" target="_blank"><img class="workimage" src="images/icons/plateicon.png" style="width: 185px;"/></a>
+                <a href="works/cs51project.zip"><img class="workimage" src="images/icons/plateicon.png" style="width: 185px;"/></a>
                 <iframe style="border:none; width: 200px; height: 185px;" src="http://files.photosnack.com/iframejs/embed.html?hash=pt9529ii&t=1400885491" width="350" height="350" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true" ></iframe>
                 <br>
                 <ul id="workdescription">
