--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
                     </a>
                 </div>
                 <div class="col2blog">  
-                    <iframe class="border" width="620" height="350" src="http://theannielin.blogspot.com/" frameborder="0"></iframe>
+                    <iframe class="border" style="height: 100%" width="620" height="350" src="http://theannielin.blogspot.com/" frameborder="0"></iframe>
                 </div>
             </div>
         </div>
