--- a/mobilepage.html
+++ b/mobilepage.html
@@ -247,15 +247,11 @@
             <div class="main">
                 <div class="col1blog">
                     <a href="http://www.theannielin.blogspot.com">
-	                    <p id="eyes"> LOOK AT THE WORLD THROUGH <br>MY EYES</p>
+	                    <p id="eyes">LOOK AT THE WORLD THROUGH <br>MY EYES</p>
 	                    <br>
-	                    <p id="eyes"> JUST SCROLL </p>
-	                    <p id="eyestiny"> (within the box: click and then use the down arrow) </p>
+	                    <p id="eyestiny">TAP HERE</p>
 	                    <img src="images/eyes.png" style="width: 260px;"/>
                     </a>
-                </div>
-                <div class="col2blog">  
-                    <iframe class="border" style="height: 100%" width="620" height="350" src="http://theannielin.blogspot.com/" frameborder="0"></iframe>
                 </div>
             </div>
         </div>
