--- a/index.html
+++ b/index.html
@@ -49,13 +49,20 @@
         }
     </script>
     <!-- For Mobile -->
-    <script language=javascript>
-    <!--
-    if ((navigator.userAgent.match(/iPhone/i)) || (navigator.userAgent.match(/iPod/i))) {
-       location.replace("mobilepage.html");
-    }
-    -->
-    </script>
+    <style type="text/css">
+        .mobileShow { display: none;}
+        /* Smartphone Portrait and Landscape */
+        @media only screen
+        and (min-device-width : 320px)
+        and (max-device-width : 480px){ .mobileShow { display: inline;}}
+    </style>
+    <style type="text/css">
+        .mobileHide { display: inline;}
+        /* Smartphone Portrait and Landscape */
+        @media only screen
+        and (min-device-width : 320px)
+        and (max-device-width : 480px){  .mobileHide { display: none;}}
+    </style>
     <!-- Google Analytics Code -->
 	<script>
 	  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -252,8 +259,8 @@
                     <a href="http://www.theannielin.blogspot.com">
 	                    <p id="eyes"> LOOK AT THE WORLD THROUGH <br>MY EYES</p>
 	                    <br>
-	                    <p id="eyes"> JUST SCROLL </p>
-	                    <p id="eyestiny"> (within the box: click and then use the down arrow) </p>
+	                    <p id="eyes" class="mobileHide"> JUST SCROLL </p>
+	                    <p id="eyestiny" class="mobileHide"> (within the box: click and then use the down arrow) </p>
 	                    <img src="images/eyes.png" style="width: 260px;"/>
                     </a>
                 </div>
