--- a/index.html
+++ b/index.html
@@ -48,6 +48,21 @@
             e.style.display = 'block';
         }
     </script>
+    <!-- For Mobile -->
+    <style type="text/css">
+        .mobileShow { display: none;}
+        /* Smartphone Portrait and Landscape */
+        @media only screen
+        and (min-device-width : 320px)
+        and (max-device-width : 480px){ .mobileShow { display: inline;}}
+    </style>
+    <style type="text/css">
+        .mobileHide { display: inline;}
+        /* Smartphone Portrait and Landscape */
+        @media only screen
+        and (min-device-width : 320px)
+        and (max-device-width : 480px){  .mobileHide { display: none;}}
+    </style>
     <!-- Google Analytics Code -->
 	<script>
 	  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
