--- a/index.html
+++ b/index.html
@@ -261,10 +261,11 @@
 	                    <br>
 	                    <p id="eyes" class="mobileHide"> JUST SCROLL </p>
 	                    <p id="eyestiny" class="mobileHide"> (within the box: click and then use the down arrow) </p>
+                        <p id="eyestiny" class="mobileShow">Tap Here</p>
 	                    <img src="images/eyes.png" style="width: 260px;"/>
                     </a>
                 </div>
-                <div class="col2blog">  
+                <div class="col2blog mobileHide">  
                     <iframe class="border" style="height: 100%" width="620" height="350" src="http://theannielin.blogspot.com/" frameborder="0"></iframe>
                 </div>
             </div>
