most bugs fixed

--- a/index.html
+++ b/index.html
@@ -223,11 +223,13 @@
             <div class="main">
                 <div width="800px"><a href="http://github.com/theannielin" target="_blank"><div id="forkme">FORK ME ON GITHUB!</div></a></div>
                 <br><br><br>
-                <a href="http://brushup.me/" target="_blank"><img class="workimage" src="images/icons/brushupicon.png" style="width: 185px;"/></a>
-                <a href="http://www.hcs.harvard.edu/firstgen/" target="_blank"><img class="workimage" src="images/icons/firstgenicon.png" style="width: 185px;"/></a>
-                <a href="works/cs51project.zip"><img class="workimage" src="images/icons/plateicon.png" style="width: 185px;"/></a>
-                <iframe style="border:none; width: 200px; height: 185px;" src="http://files.photosnack.com/iframejs/embed.html?hash=pt9529ii&t=1400885491" width="350" height="350" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true" ></iframe>
-                <br>
+                <div class="workblocks">
+                    <a href="http://brushup.me/" target="_blank"><img class="workimage" src="images/icons/brushupicon.png" style="width: 185px;"/></a>
+                    <a href="http://www.hcs.harvard.edu/firstgen/" target="_blank"><img class="workimage" src="images/icons/firstgenicon.png" style="width: 185px;"/></a>
+                    <a href="works/cs51project.zip"><img class="workimage" src="images/icons/plateicon.png" style="width: 185px;"/></a>
+                        <iframe style="border:none; width: 200px; height: 185px;" src="http://files.photosnack.com/iframejs/embed.html?hash=pt9529ii&t=1400885491" width="350" height="350" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true" ></iframe>
+                    <br>
+                </div>
                 <ul id="workdescription">
                     <li>Brushup.Me</li>
                     <li>Harvard First Gen Website</li>
@@ -250,7 +252,9 @@
                     </a>
                 </div>
                 <div class="col2blog">  
-                    <iframe class="border" style="height: 100%" width="620" height="350" src="http://theannielin.blogspot.com/" frameborder="0"></iframe>
+                    <div class="frame-container border">
+                        <iframe width="620" height="350" src="http://theannielin.blogspot.com/" frameborder="0"></iframe>
+                    </div>
                 </div>
             </div>
         </div>
