--- a/index.html
+++ b/index.html
@@ -222,13 +222,23 @@
         <div class="section">
             <div class="main">
                 <div width="800px"><a href="http://github.com/theannielin" target="_blank"><div id="forkme">FORK ME ON GITHUB!</div></a></div>
-                <br><br><br><br>
-                <div class="workblocks">
-                    <a href="http://brushup.me/" target="_blank"><img class="workimage" src="images/icons/brushupicon.png" style="width: 185px;"/></a>
-                    <a href="http://www.hcs.harvard.edu/firstgen/" target="_blank"><img class="workimage" src="images/icons/firstgenicon.png" style="width: 185px;"/></a>
-                    <a href="works/cs51project.zip"><img class="workimage" src="images/icons/plateicon.png" style="width: 185px;"/></a>
-                        <iframe style="border:none; width: 200px; height: 185px;" src="http://files.photosnack.com/iframejs/embed.html?hash=pt9529ii&t=1400885491" width="350" height="350" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true" ></iframe>
-                    <br>
+                <br><br>
+                <div style="width: 100%; display: table;">
+                    <div style="display: table-row">
+                        <div class="workblocks">
+                            <a href="http://brushup.me/" target="_blank"><img class="workimage" src="images/icons/brushupicon.png"/></a>
+                        </div>
+                        <div class="workblocks">
+                            <a href="http://www.hcs.harvard.edu/firstgen/" target="_blank"><img class="workimage" src="images/icons/firstgenicon.png"/></a>
+                        </div>
+                        <div class="workblocks">
+                            <a href="works/cs51project.zip"><img class="workimage" src="images/icons/plateicon.png"/></a>
+                        </div>
+                        <div class="workblocks">
+                                <iframe style="border:none; width: 190px; height: 190px;" src="http://files.photosnack.com/iframejs/embed.html?hash=pt9529ii&t=1400885491" width="350" height="350" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true" ></iframe>
+                            <br>
+                        </div>
+                    </div>
                 </div>
                 <ul id="workdescription">
                     <li>Brushup.Me</li>
