--- a/index.html
+++ b/index.html
@@ -106,6 +106,7 @@
         <div id="myfooter" class="main">
             <br>
             <p> { All content &copy Annie Lin }</p>
+            <p style="font-size:8px"> { Site Works Best On Latest Browser Versions (Safari or Chrome Recommended) }</p>
             <br>
         </div> 
     </div>
