--- a/index.html
+++ b/index.html
@@ -104,7 +104,8 @@
     <!-- Footer Begin -->
     <div id="footer" class="layer1">
         <div id="myfooter" class="main">
-            <p> { All content &copy Annie Lin }</p>
+            <br>
+            <p style="font-size:18px"> { All content &copy Annie Lin }</p>
             <p style="font-size:13px"> { Site Works Best On Latest Browser Versions (Safari or Chrome Recommended) }</p>
             <br>
         </div> 
