--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
         <div id="myfooter" class="main">
             <br>
             <p style="font-size:18px"> { All content &copy Annie Lin }</p>
-            <p style="font-size:13px"> { Site Works Best On Latest Browser Versions (Safari or Chrome Recommended) }</p>
+            <p style="font-size:13px; font-family:caviardreams"> { Site Works Best On Latest Browser Versions (Safari or Chrome Recommended) }</p>
             <br>
         </div> 
     </div>
