--- a/index.html
+++ b/index.html
@@ -105,8 +105,8 @@
     <div id="footer" class="layer1">
         <div id="myfooter" class="main">
             <br>
-            <p style="font-size:18px"> { All content &copy Annie Lin }</p>
-            <p style="font-size:13px; font-family:caviardreams"> { Site Works Best On Latest Browser Versions (Safari or Chrome Recommended) }</p>
+            <p style="font-size:13px; font-family:caviardreams"> { All content &copy Annie Lin }
+            <br>{ Site Works Best On Latest Browser Versions (Safari or Chrome Recommended) }</p>
             <br>
         </div> 
     </div>
