--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <script src="fullPage.js-master/vendors/jquery.easings.min.js"></script>   
     <script type="text/javascript" src="fullPage.js-master/vendors/jquery.slimscroll.min.js"></script>
     <script type="text/javascript" src="fullPage.js-master/jquery.fullPage.js"></script>
-    <style type="text/css" src="outdatedBrowser.min.css"></style>
+    <style type="text/css" src="outdated-browser-master/src/outdatedBrowser.min.css"></style>
     <script type="text/javascript">
         $(document).ready(function() {
             $('#fullpage').fullpage({
@@ -286,7 +286,7 @@
                                 lowerThan: 'IE10'
                             })
                         
-<script src="outdatedBrowser.min.js"></script>
+<script src="outdated-browser-master/src/outdatedBrowser.min.js"></script>
 </body>
 </html>
 <!-- Congrats! You have reached the end! -->
