--- a/outdated-browser-master/demo/index.html
+++ b/outdated-browser-master/demo/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Outdated Browser Plugin v1.0</title>
-        <link rel="stylesheet" type="text/css" href="src/outdatedBrowser.min.css">
+        <link rel="stylesheet" type="text/css" href="../src/outdatedBrowser.min.css">
         <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
         <style type="text/css">
             body {background-color: #fafafa; font-family: 'Open Sans', sans-serif;}
@@ -19,7 +19,7 @@
      </div>
 
         <!-- javascript includes -->
-        <script src="src/outdatedBrowser.min.js"></script>
+        <script src="../src/outdatedBrowser.min.js"></script>
 
         <!-- plugin call -->
         <script>
