--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
                         <li>Fluent Chinese (Mandarin)</li>
                         <li>Basic German</li>
                         <li>Elementary Japanese</li>
-                        <li>Graphic Design (Adobe Photoshop/Illustrator)</li>
+                        <li>Graphic Design (Photoshop/Illustrator)</li>
                     </ul>
                 </div>
             </div>
