--- a/test.html
+++ b/test.html
@@ -65,7 +65,7 @@
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
 
     <!-- Detect Outdated Browsers: http://outdatedbrowser.com -->
-    <link rel="stylesheet" href="../font-awesome/css/font-awesome.min.css">  
+    <link rel="stylesheet" href="../outdatedbrowser/outdatedbrowser.min.css">    
 
     <!-- Google Analytics Code -->
     <script>
@@ -198,24 +198,24 @@
     <!-- Footer -->
     <nav class="navbar navbar-default navbar-fixed-bottom" id="footer">
         <div class="container text-center">
-            <a href="mailto:theannielin@gmail.com"> 
-                <i class="fa fa-email"></i>
-            </a>
-            <a href="http://www.linkedin.com/in/theannielin/"> 
-                <i class="fa fa-email"></i>
-            </a>
-            <a href="http://www.facebook.com/the.annie.lin"> 
-                <i class="fa fa-facebook"></i>
-            </a>
-            <a href="http://www.instagram.com/theannielin"> 
-                <i class="fa fa-instagram"></i>
-            </a>
-            <a href="http://www.thelittleorphanannie.tumblr.com/"> 
-                <i class="fa fa-tumblr"></i>
-            </a>
-            <a href="http://www.youtube.com/channel/UC4xmxjVcO3qGnQ7Y_hZlDnw"> 
-                <i class="fa fa-youtube"></i>
-            </a>
+                <a href="mailto:theannielin@gmail.com"> 
+                    <i class="fa fa-facebook"></i>
+                </a>
+                <a href="http://www.linkedin.com/in/theannielin/"> 
+                    <div id="linkedin"><!-- LinkedIn: www.linkedin.com/in/theannielin/ --></div> 
+                </a>
+                <a href="http://www.facebook.com/the.annie.lin"> 
+                    <i class="fa fa-facebook fa-fw"> 
+                </a>
+                <a href="http://www.instagram.com/theannielin"> 
+                    <div id="instagram"><!-- Instagram: www.instagram.com/theannielin --></div> 
+                </a>
+                <a href="http://www.thelittleorphanannie.tumblr.com/"> 
+                    <div id="tumblr"><!-- Tumblr: www.thelittleorphanannie.tumblr.com/ --></div> 
+                </a>
+                <a href="http://www.youtube.com/channel/UC4xmxjVcO3qGnQ7Y_hZlDnw"> 
+                    <div id="youtube"><!-- YouTube: www.youtube.com/channel/UC4xmxjVcO3qGnQ7Y_hZlDnw --></div> 
+                </a>
             <br>
             <p style="font-size:13px; font-family:caviardreams">{ All content &copy Annie Lin }</p>
         </div>
